fixed shift problem of buttons

--- a/RockPaperScissors/style.css
+++ b/RockPaperScissors/style.css
@@ -5,12 +5,21 @@ body{
   display: flex;
   font-family: Arial, sans-serif;
 }
+.buttons{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
 button{
   border: none;
   border-radius: 25%;
   padding: 10px;
   cursor: pointer;
   font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .rock{
   background-color: brown;
@@ -26,13 +35,18 @@ button{
 }
 .restart{
   cursor: pointer;
-  width: 180px;
-  height: 40px;
+  width: 100px;
+  padding: 10px;
   background-color: rgb(0, 88, 139);
   color: white;
   border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font: bold;
+  font-size: 13.33px;
+}
+.restart .reset{
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
